# agent-immune

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  publish.yml
assets/: demo.cast
bench/: __init__.py  dataset_loader.py  run_benchmarks.py  run_memory_benchmark.py
demos/: demo_encoding_bypass.py  demo_escalation.py  demo_full_lifecycle.py  demo_learning_loop.py  demo_quick.py  demo_semantic_catch.py  demo_standalone.py  demo_with_agt.py
docs/: architecture.md  benchmarks.md  comparison.md  getting_started.md  integration_guide.md  marketplace_listings.md  mcp_marketplaces.md  roadmap.md  threat_model.md
examples/: chat_guard.py  crewai_guard.py  langchain_agent.py
src/agent_immune/: __init__.py  __main__.py  immune.py  mcp_server.py  observability.py  rate_limiter.py
src/agent_immune/adapters/: __init__.py  agt.py  langchain.py  mcp.py
src/agent_immune/core/: __init__.py  accumulator.py  decomposer.py  models.py  normalizer.py  output_scanner.py  scorer.py
src/agent_immune/corpus/: __init__.py  default_attacks.json
src/agent_immune/hardener/: __init__.py  templates.py
src/agent_immune/memory/: __init__.py  bank.py  embedder.py  entry.py
tests/: conftest.py  test_accumulator.py  test_adapters.py  test_bank.py  test_cli.py  test_decomposer.py  test_hardener.py  test_immune.py  test_mcp_server.py  test_normalizer.py  test_observability.py  test_output_scanner.py  test_rate_limiter.py  test_scorer.py
tests/attacks/: benign_inputs.json  encoding_bypass_attacks.json  exfiltration_attacks.json  indirect_injection_attacks.json  injection_attacks.json  khmer_mixed_attacks.json  multilingual_attacks.json  output_exfiltration.json
